--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
+  //    background-color: red;
     align-items: center;
     //min-height: 100vh;
   //  max-height:  100vh;
@@ -10,7 +11,11 @@
     //background-clip: content-box;
     background-size: cover;
     background-image: url('../public/assets/landingback.svg');
-    min-height: 100vh;
+  //  height: 100vh; 
+    min-height: 779px; 
+   // background-color: red;
+   height: fit-content;
+   // height: 100vh;
     //padding-bottom: 4rem;
     //padding-top: 2.125rem;
 }
@@ -34,8 +39,9 @@
    // max-width: 48%;
     max-width: 43.2rem;
 
-    width: fit-content;
-    height: 100%;
+   // width: fit-content;
+   // height: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -99,7 +105,8 @@
     width: 49.5rem;
    // background-color: blue;
    // background-color: rgba(0, 255, 94, 0.192);
-    height: 100%;
+   // height: 100%;
+    height: fit-content;
     padding-left: 2rem;
     padding-top: .5rem;
     padding-right: 2rem;
@@ -197,6 +204,8 @@
     // background-color: #252525;
      background: linear-gradient(0deg, #252525 20%, rgba(139, 139, 139, 0.00)50%, #5b6249 90%);
      height: fit-content; // set to 100vh maybe
+     min-height: fit-content;
+     max-height: fit-content;
      width: 100%;
      display: flex;
      flex-direction: column;
@@ -586,6 +595,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     background-size: cover;
     background-image: url('../public/assets/landing-small.svg');
     min-height: 100vh;
+    height: fit-content;
+    
     //padding-bottom: 4rem;
     padding-top: 5.5rem;
     padding-bottom: 2rem;
@@ -680,7 +691,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     width: 90.5%;
    // background-color: blue;
    // background-color: rgba(0, 255, 94, 0.192);
-    height: 100%;
+   // height: 100%;
+    height: fit-content;
     padding-left: 0;
     padding-top: 2rem;
     padding-right: 0;
@@ -696,9 +708,11 @@ transform: translateX(-3.125%) translateY(-2.75%);
     z-index: 1;
     height: 3;
    // max-height: auto;
-    min-height: 34.5vh;
-    max-height: 34.5vh;
-
+   // min-height: 34.5vh;
+   max-height: 34.5vh;
+  //  min-height: 14.72rem;
+  //  max-height: 14.72rem;
+    height: 14.72rem;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -1038,6 +1052,7 @@ transform: translateX(-3.125%) translateY(-2.75%);
     background-size: cover;
     background-image: url('../public/assets/landing-small.svg');
     min-height: 100vh;
+    height: fit-content;
     //padding-bottom: 4rem;
     padding-top: 6rem;
     padding-bottom: 2rem;
@@ -1148,8 +1163,13 @@ transform: translateX(-3.125%) translateY(-2.75%);
     z-index: 1;
     height: 3;
    // max-height: auto;
-    min-height: 62.5vh;
-    max-height: 62.5vh;
+   // min-height: 62.5vh;
+   // max-height: 62.5vh;
+    min-height: 26.68rem;
+    max-height: 26.68rem;
+   // min-height: 30.42rem;
+   // max-height: 30.42rem;
+   //height: 100%;
 
     display:flex;
     margin-left: auto;
@@ -1270,7 +1290,7 @@ transform: translateX(-3.125%) translateY(-2.75%);
     align-items: flex-end;
     padding-bottom: 1.5rem;
     background-image: url('../public/assets/notion01.svg');
-    background-position: left;
+    background-position: center;
   
     background-size: cover;
     background-repeat: no-repeat;
@@ -1501,6 +1521,7 @@ transform: translateX(-3.125%) translateY(-2.75%);
     background-size: cover;
     background-image: url('../public/assets/landing-small.svg');
     min-height: 100vh;
+    height: fit-content;
     //padding-bottom: 4rem;
     padding-top: 6rem;
     padding-bottom: 2rem;
@@ -1611,9 +1632,11 @@ transform: translateX(-3.125%) translateY(-2.75%);
     z-index: 1;
     height: 3;
    // max-height: auto;
-    min-height: 63vh;
-    max-height: 63vh;
-
+    //min-height: 63vh;
+    //max-height: 63vh;
+  //  min-height: 30.673125rem;
+  //  max-height: 30.673125rem;
+    height: 27.75rem;
     display:flex;
     margin-left: auto;
     margin-right: auto;
@@ -1924,7 +1947,7 @@ transform: translateX(-3.125%) translateY(-2.75%);
    // padding-top: 1rem;
     padding-bottom: 0;
     margin-bottom: 0;
-    transform: translateY(1rem);
+    transform: translateY(.3rem);
   }
   .footerImage {
     background-image: url('../public/assets/footer5.png');
@@ -1960,7 +1983,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
    // max-width: 47.76vw;
    // background-color: blue;
    // background-color: rgba(0, 255, 94, 0.192);
-    height: 100%;
+  //  height: 100%;
+    height: fit-content;
     padding-left: 2rem;
     
     padding-top: .5rem;
@@ -1994,7 +2018,9 @@ transform: translateX(-3.125%) translateY(-2.75%);
     border-radius: 7.5px;
     width: 80%;
   //  height: 28.5rem;
-    height: 66.76vh;
+   // height: 66.76vh;
+   // height: 32.5rem;
+    height: 33.1rem;
     background-color:#414B44;
     box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.3);
   //  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
@@ -2018,7 +2044,9 @@ transform: translateX(-3.125%) translateY(-2.75%);
     width: 80%;
     //height: 28.5rem;
     //height: 44.48vw;
-    height: 66.76vh;
+    height: 33.1rem;
+    //height: 32.5rem;
+   // height: 66.76vh;
     background-color: #252525;
     box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.4);
     margin-left: auto;
@@ -2038,7 +2066,9 @@ transform: translateX(-3.125%) translateY(-2.75%);
     border-radius: 7.5px;
     width: 80%;
     //height: 28.5rem;
-    height: 66.76vh;
+   // height: 32.5rem;
+    height: 33.1rem;
+  //  height: 66.76vh;
     background-color: #252525;
     box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
     margin-left: auto;
@@ -2142,7 +2172,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     border-radius: 7.5px;
     width: 70%;
   //  height: 28.5rem;
-    height: 68vh;
+   // height: 68vh;
+    height: 33.1rem;
     background-color:#414B44;
     box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.3);
   //  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
@@ -2166,7 +2197,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     width: 70%;
     //height: 28.5rem;
     //height: 44.48vw;
-    height: 68vh;
+    height: 33.1rem;
+    //height: 68vh;
     background-color: #252525;
     box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.4);
     margin-left: auto;
@@ -2186,7 +2218,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     border-radius: 7.5px;
     width: 70%;
     //height: 28.5rem;
-    height: 67.5vh;
+    //height: 67.5vh;
+    height: 32.864rem;
     background-color: #252525;
     box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
     margin-left: auto;
@@ -2235,7 +2268,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     border-radius: 7.5px;
     width: 70%;
   //  height: 28.5rem;
-    height: 68vh;
+    height: 35rem;
+    //height: 68vh;
     background-color:#414B44;
     box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.3);
   //  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
@@ -2259,7 +2293,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
     width: 70%;
     //height: 28.5rem;
     //height: 44.48vw;
-    height: 68vh;
+   // height: 68vh;
+    height: 35rem;
     background-color: #252525;
     box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.4);
     margin-left: auto;
@@ -2279,7 +2314,9 @@ transform: translateX(-3.125%) translateY(-2.75%);
     border-radius: 7.5px;
     width: 70%;
     //height: 28.5rem;
-    height: 67.5vh;
+  //  height: 32.864rem;
+    height: 35rem;
+  //  height: 67.5vh;
     background-color: #252525;
     box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
     margin-left: auto;
@@ -2313,7 +2350,7 @@ transform: translateX(-3.125%) translateY(-2.75%);
     // background-color: #252525;
      //background: linear-gradient(0deg, #252525 20%, rgba(139, 139, 139, 0.00)50%, #5b6249 90%);
      background-repeat: no-repeat;
-     background-position: center 20%;
+     background-position: center 28.75%;
     // background-position: center 0%;
      background-size: cover;
      background-image: url('../public/assets/canvas2.svg');
