--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -367,6 +367,13 @@
   
 }
 @media (max-width: 480px) {
+    .waveVector {
+        width: 100%;
+        max-width: 100%;
+        left: 0;
+        display: none;
+       // min-height: auto;
+      }
     .educationContainer {
         background-color: #252525;
         height: fit-content;
@@ -408,8 +415,8 @@
     }
     .educationTopPanel {
         width: 100%;
-   
-        height: 33vh;
+        height: 14.5rem;
+     //  height: 33vh;
         box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
         background-color: #353535;
         border-radius: 24px;
@@ -532,7 +539,8 @@
        // height: 52.56%;
        //margin-top: ;
         width: 100%;
-        height: 33vh;
+        height: 16.06rem;
+     //   height: 33vh;
         z-index: 5;
        // margin-left: 10%;
         border-bottom-left-radius: 18.75px;
@@ -548,7 +556,8 @@
        // height: 52.56%;
         width: 90vw;
 
-        height: 34vh;
+     //   height: 34vh;
+        height: 16.55rem;
         margin-right: auto;
         z-index: 5;
        // transform: translateX(0%);
@@ -564,7 +573,8 @@
         //width: 42rem;
        // height: 52.56%;
        width: 100%;
-       height: 33vh;
+       height: 16.06rem;
+    //   height: 33vh;
         z-index: 5;
         border-bottom-left-radius: 18.75px;
         border-top-left-radius: 18.75px;
@@ -644,6 +654,12 @@
     }
 }
 @media (min-width: 481px) and (max-width: 768px) {
+    .waveVector {
+        display: none;
+    }
+    .educationForeground {
+        display: none;
+    }
     .educationContainer {
         background-color: #252525;
         height: fit-content;
@@ -686,7 +702,8 @@
     .educationTopPanel {
         width: 100%;
    
-        height: 40vh;
+       // height: 40vh;
+        height: 19.475rem;
         box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
         background-color: #353535;
         border-radius: 24px;
@@ -706,7 +723,7 @@
         color: #FFFBEC;
         text-align: center;
         font-family: "Helvetica Neue";
-        font-size: clamp(2rem, 4vw, 4rem);
+        font-size: clamp(2.125rem, 4vw, 4rem);
         font-style: normal;
         font-weight: 600;
         line-height: 121.98%; /* 87.825px */
@@ -810,7 +827,8 @@
        // height: 52.56%;
        //margin-top: ;
         width: 100%;
-        height: 40vh;
+       // height: 40vh;
+        height: 19.475rem;
         z-index: 5;
        // margin-left: 10%;
         border-bottom-left-radius: 18.75px;
@@ -826,7 +844,8 @@
        // height: 52.56%;
         width: 90vw;
 
-        height: 40vh;
+      //  height: 40vh;
+        height: 19.475rem;
         margin-right: auto;
         z-index: 5;
        // transform: translateX(0%);
@@ -842,7 +861,8 @@
         //width: 42rem;
        // height: 52.56%;
        width: 100%;
-       height: 40vh;
+       height: 19.475rem;
+      // height: 40vh;
         z-index: 5;
         border-bottom-left-radius: 18.75px;
         border-top-left-radius: 18.75px;
@@ -953,8 +973,9 @@
     }
     .panelContainer {
         width: 88%;
-        //height: 26.25rem;
-        //background-color: red;
+      //  height: fit-content;
+     //   height: 26.25rem;
+      //  background-color: red;
        // height: ;
        z-index: 1;
       // margin-top: 3rem;
@@ -963,8 +984,9 @@
     }
     .educationTopPanel {
         width: 100%;
-   
-        height: 50vh;
+     //   height: 100%;
+     //   height: 50vh;
+           height: 24.34rem;
         box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
         background-color: #353535;
         border-radius: 24px;
@@ -1088,7 +1110,8 @@
        // height: 52.56%;
        //margin-top: ;
         width: 100%;
-        height: 45vh;
+       // height: 45vh;
+        height: 21.90rem;
         z-index: 5;
        // margin-left: 10%;
         border-bottom-left-radius: 18.75px;
@@ -1103,8 +1126,8 @@
         //width: 40.75rem;
        // height: 52.56%;
         width: 100%;
-
-        height: 45vh;
+        height: 21.90rem;
+       // height: 45vh;
         margin-left: auto;
        // border-radius: 20px;
         z-index: 5;
@@ -1123,7 +1146,8 @@
         //width: 42rem;
        // height: 52.56%;
        width: 100%;
-       height: 45vh;
+    //   height: 45vh;
+       height: 21.90rem;
         z-index: 5;
         border-bottom-left-radius: 18.75px;
         border-top-left-radius: 18.75px;
@@ -1205,6 +1229,11 @@
         margin-top: 1.5rem;
     }
 }
+@media (max-width: 940px) {
+    .educationSeperatorWrapper {
+        display: none;
+    }
+}
 @media (min-width: 1025px) and (max-width: 1280px) {
     .educationContainer {
         background-color: #252525;
@@ -1247,8 +1276,8 @@
     }
     .educationTopPanel {
         width: 100%;
-   
-        height: 50vh;
+        height: 24.34rem;
+       // height: 50vh;
         box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
         background-color: #353535;
         border-radius: 24px;
@@ -1372,7 +1401,8 @@
        // height: 52.56%;
        //margin-top: ;
         width: 100%;
-        height: 45vh;
+       // height: 45vh;
+        height: 21.90rem;
         z-index: 5;
        // margin-left: 10%;
         border-bottom-left-radius: 18.75px;
@@ -1388,7 +1418,8 @@
        // height: 52.56%;
         width: 100%;
 
-        height: 45vh;
+      //  height: 45vh;
+        height: 21.90rem;
         margin-left: auto;
        // border-radius: 20px;
         z-index: 5;
@@ -1407,7 +1438,8 @@
         //width: 42rem;
        // height: 52.56%;
        width: 100%;
-       height: 45vh;
+       //height: 45vh;
+       height: 21.90rem;
         z-index: 5;
         border-bottom-left-radius: 18.75px;
         border-top-left-radius: 18.75px;
@@ -1531,8 +1563,8 @@
     }
     .educationTopPanel {
         width: 100%;
-   
-        height: 50vh;
+        height: 24.34rem;
+     //   height: 50vh;
         box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
         background-color: #353535;
         border-radius: 24px;
