--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -4133,7 +4133,8 @@
     .midWrapper {
         width:100%;
         padding-right: 1rem;
-        margin-top:5rem;
+      //  margin-top:5rem;
+      margin-bottom: 11.2rem;
 
     }
  
@@ -4279,11 +4280,5 @@
         background-position: center;
         
     }
-    .caseStudiesButton {
-       
-        margin-bottom: 1rem;
-        margin-top: 2.5rem;
-      
-    }
-    
+
 }
